# rust-playground

./: README.md  challenges-and-resources.md
01_cli_news/: Cargo.toml
01_cli_news/newsapi/: Cargo.toml
01_cli_news/newsapi/src/: lib.rs
01_cli_news/src/: main.rs  theme.rs
02_cli-todos/: Cargo.toml
02_cli-todos/src/: main.rs
03_log_function/: Cargo.toml
03_log_function/src/: main.rs
cli-news/: Cargo.toml
cli-news/newsapi/src/: lib.rs
cli-news/src/: main.rs
hello_world/: Cargo.toml
src/: main.rs  nonsense.rs
tests/src/: foo.test.rs  main.rs
