[package]
name = "cli-news"
version = "0.1.0"
edition = "2021"

description = "FFXIV News CLI"
license = "MIT"
authors = ["Joaquim Neto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20.0"
dotenv = "0.15.0"
termimad = "0.14.2"
newsapi = {path = "./newsapi", features = ["async"]}
tokio = {version = "1.17.0", features = ["full"]}
